--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.11.3",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
