--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
     "axios": "^1.4.0",
+    "boxicons": "^2.1.4",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.3",
