--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@mui/material": "^5.14.5",
     "axios": "^1.4.0",
     "boxicons": "^2.1.4",
+    "leaflet": "^1.9.4",
     "papaparse": "^5.4.1",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-big-calendar": "^1.11.3",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
